--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/node": "^18.14.6",
     "@types/react-syntax-highlighter": "^15.5.6",
     "framer-motion": "^9.0.7",
+    "module-alias": "^2.2.2",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
